<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white">

    <TextView
        android:id="@+id/tv_dialog_hint"
        android:layout_alignParentTop="true"
        android:text="@string/prof_dialog_hint"
        android:textSize="@dimen/sixteen_sp"
        android:gravity="center"
        android:layout_marginTop="@dimen/eight_dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <EditText
        android:id="@+id/et_search"
        android:background="@drawable/background_prof_dialog"
        android:layout_below="@+id/tv_dialog_hint"
        android:hint="@string/dialog_search_hint"
        android:textSize="@dimen/sixteen_sp"
        android:layout_marginTop="@dimen/eight_dp"
        android:layout_marginLeft="@dimen/eight_dp"
        android:layout_marginRight="@dimen/eight_dp"
        android:padding="@dimen/eight_dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:maxLength="30"
        android:maxLines="1"/>

    <LinearLayout
        android:layout_below="@+id/et_search"
        android:layout_marginTop="@dimen/eight_dp"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/btn_cancel"
            android:layout_weight="0.5"
            android:text="@string/cancel"
            android:background="@drawable/background_prof_dialog"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <Button
            android:id="@+id/btn_save"
            android:layout_weight="0.5"
            android:text="@string/save"
            android:background="@drawable/background_prof_dialog"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>
</RelativeLayout>