<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="@dimen/eight_dp"
    android:layout_marginLeft="@dimen/eight_dp"
    android:layout_marginRight="@dimen/eight_dp"
    android:background="@drawable/background_list_item"
    android:padding="@dimen/eight_dp">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_marginTop="@dimen/eight_dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_profession"
                android:layout_marginLeft="@dimen/eight_dp"
                android:text="@string/profession"
                android:textColor="@color/colorPrimary"
                android:textStyle="bold"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/tv_date"
                android:layout_marginRight="@dimen/eight_dp"
                android:text="@string/date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <View
            android:layout_marginTop="@dimen/eight_dp"
            android:layout_marginLeft="@dimen/eight_dp"
            android:layout_marginRight="@dimen/eight_dp"
            android:background="@color/colorLightGrey"
            android:layout_width="match_parent"
            android:layout_height="@dimen/one_dp"/>

        <LinearLayout
            android:layout_marginTop="@dimen/eight_dp"
            android:layout_width="match_parent"
            android:layout_height="@dimen/fifty_dp"
            android:orientation="horizontal">

            <ImageView
                android:src="@drawable/ic_profile_name_20_20"
                android:layout_marginLeft="@dimen/eight_dp"
                android:layout_gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/tv_description"
                android:text="@string/description"
                android:layout_marginLeft="@dimen/eight_dp"
                android:maxLines="2"
                android:ellipsize="end"
                android:layout_gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <LinearLayout
            android:layout_marginTop="@dimen/eight_dp"
            android:layout_width="match_parent"
            android:layout_height="@dimen/fifty_dp"
            android:orientation="horizontal">

            <ImageView
                android:src="@drawable/ic_salary_20_20"
                android:layout_marginLeft="@dimen/eight_dp"
                android:layout_gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/tv_salary"
                android:text="@string/salary"
                android:layout_marginLeft="@dimen/eight_dp"
                android:layout_weight="1"
                android:layout_gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <CheckBox
                android:id="@+id/cb_favorites"
                android:layout_marginRight="@dimen/eight_dp"
                android:button="@drawable/iv_fav_default_45_45"
                android:background="@android:color/white"
                android:checked="false"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>
    </LinearLayout>
</android.support.v7.widget.CardView>