<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.main.MainActivity"
    android:orientation="vertical">

    <include
        layout="@layout/custom_toolbar"
        app:layout_constraintTop_toTopOf="parent"/>

    <LinearLayout
        android:id="@+id/ll_search"
        android:orientation="horizontal"
        android:background="@drawable/ll_search_background"
        android:layout_margin="@dimen/eight_dp"
        android:layout_width="match_parent"
        android:layout_height="@dimen/fifty_dp"
        app:layout_constraintTop_toBottomOf="@+id/custom_toolbar">

        <EditText
            android:id="@+id/et_search"
            android:layout_weight="1"
            android:layout_gravity="center"
            android:background="@android:color/white"
            android:hint="@string/search"
            android:textSize="@dimen/eighteen_sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/eight_dp"
            android:inputType="text"
            android:maxLines="1"
            android:maxLength="30"/>

        <ImageButton
            android:id="@+id/ib_search"
            android:src="@drawable/ic_search_black_opacity_70_24dp"
            android:background="@android:color/transparent"
            android:layout_margin="@dimen/eight_dp"
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <RelativeLayout
        app:layout_constraintTop_toBottomOf="@id/ll_search"
        android:id="@+id/rl_parameters"
        android:background="@drawable/ll_search_background"
        android:layout_margin="@dimen/eight_dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="@dimen/fifty_dp">

        <TextView
            android:id="@+id/tv_parameters"
            android:layout_gravity="center"
            android:layout_alignParentLeft="true"
            android:text="@string/salary_and_job_time"
            android:textSize="@dimen/eighteen_sp"
            android:layout_margin="@dimen/eight_dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <ImageButton
            android:id="@+id/ib_parameters"
            android:layout_alignParentRight="true"
            android:src="@drawable/ic_chevron_right_black_opacity_70_24dp"
            android:layout_margin="@dimen/eight_dp"
            android:background="@android:color/transparent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/tv_chosen_job_time"
            android:layout_below="@+id/tv_parameters"
            android:layout_alignParentLeft="true"
            android:layout_margin="@dimen/eight_dp"
            android:visibility="gone"
            android:textSize="@dimen/eighteen_sp"
            android:textColor="@color/colorPrimaryDark"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/tv_chosen_salary"
            android:layout_below="@+id/tv_chosen_job_time"
            android:layout_alignParentLeft="true"
            android:layout_margin="@dimen/eight_dp"
            android:visibility="gone"
            android:textSize="@dimen/eighteen_sp"
            android:textColor="@color/colorPrimaryDark"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </RelativeLayout>

    <RelativeLayout
        app:layout_constraintTop_toBottomOf="@id/rl_parameters"
        android:id="@+id/rl_categories"
        android:background="@drawable/ll_search_background"
        android:layout_margin="@dimen/eight_dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="@dimen/fifty_dp">

        <TextView
            android:id="@+id/tv_categories"
            android:layout_alignParentLeft="true"
            android:text="@string/categories"
            android:textSize="@dimen/eighteen_sp"
            android:layout_margin="@dimen/eight_dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <ImageButton
            android:id="@+id/ib_categories"
            android:layout_alignParentRight="true"
            android:src="@drawable/ic_chevron_right_black_opacity_70_24dp"
            android:layout_margin="@dimen/eight_dp"
            android:background="@android:color/transparent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/tv_chosen_category"
            android:layout_below="@+id/tv_categories"
            android:layout_alignParentLeft="true"
            android:layout_margin="@dimen/eight_dp"
            android:visibility="gone"
            android:textSize="@dimen/eighteen_sp"
            android:textColor="@color/colorPrimaryDark"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </RelativeLayout>

    <Button
        android:id="@+id/btn_search"
        android:text="@string/btn_search"
        android:drawableLeft="@drawable/ic_search_white_30_30"
        android:textColor="@android:color/white"
        android:textSize="@dimen/eighteen_sp"
        android:background="@drawable/btn_background"
        android:layout_margin="@dimen/eight_dp"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_width="match_parent"
        android:layout_height="@dimen/fifty_dp"/>

    <com.victor.loading.rotate.RotateLoading
        android:id="@+id/rotate_loading"
        app:loading_width="@dimen/three_dp"
        app:loading_color="@color/colorPrimary"
        app:loading_speed="15"
        android:layout_width="@dimen/forty_five_dp"
        android:layout_height="@dimen/forty_five_dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>
</android.support.constraint.ConstraintLayout>